CCD-1665: Integrated Fortify Scan into Nightly Pipelines